emqx/emqx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emqx
spec:
  selector:
    app: emqx
  type: NodePort
  ports:
    - name: mqtt
      port: 1883
      nodePort: 1883
      protocol: TCP
      targetPort: mqtt
    #- name: mqttssl
    #  port: 8883
    #  protocol: TCP
    #  nodePort: 8883
    #  targetPort: mqttssl
    #- name: mgmt
    #  port: 8081
    #  nodePort: 8081
    #  protocol: TCP
    #  targetPort: 8081
    #- name: ws
    #  port: 8083
    #  nodePort: 8083
    #  protocol: TCP
    #  targetPort: ws
    #- name: wss
    #  port: 8084
    #  nodePort: 8084
    #  protocol: TCP
    #  targetPort: wss
    - name: dashboard
      port: 18083
      nodePort: 18083
      protocol: TCP
      targetPort: dashboard
