emqx/emqx-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: emqx-tcp
  namespace: emqx
spec:
  entryPoints:
  - mqtt
  routes:
  - match: HostSNI(`*`)
    services:
    - name: emqx
      port: 1883

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
 name: emqx-dashoard-websecure
 namespace: emqx
 annotations:
   traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`emqx.example.io`) || PathPrefix(`/emqx`)
      services:
        - name: dashboard
          port: 18083
          namespace: emqx
          kind: Service
  tls:
    secretName: whoami-secret
